[gd_scene load_steps=8 format=3 uid="uid://dgfc86stwm1e3"]

[ext_resource type="Script" path="res://Scripts/UI/MakeGamePanel.gd" id="1_b4cb3"]
[ext_resource type="PackedScene" uid="uid://c5js8inpclni5" path="res://Scripts/UI/ClickablePanel/clickable_panel.tscn" id="2_22wsv"]
[ext_resource type="PackedScene" uid="uid://63nt00vu8wr3" path="res://Scripts/Sounds/play_sound_by_pressed_button.tscn" id="2_b0g2h"]
[ext_resource type="AudioStream" uid="uid://drr30phdh7dyt" path="res://Content/Sounds/TestSounds/test_click_sound.wav" id="4_ynv0i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y2i4a"]
bg_color = Color(0.111197, 0.111197, 0.111197, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6s76l"]
bg_color = Color(0.724265, 0.584043, 5.77569e-07, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8kr01"]

[node name="MakeGamePanel" type="Panel"]
custom_minimum_size = Vector2(0, 150)
script = ExtResource("1_b4cb3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GameName" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Game name"
horizontal_alignment = 1

[node name="DevelopmentProgress" type="ProgressBar" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_y2i4a")
theme_override_styles/fill = SubResource("StyleBoxFlat_6s76l")
max_value = 10.0
value = 5.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/GridContainer/DevelopmentProgress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "10/100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ClickablePanel" parent="." instance=ExtResource("2_22wsv")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_8kr01")

[node name="PlaySoundByPressedButton" parent="ClickablePanel" instance=ExtResource("2_b0g2h")]
stream = ExtResource("4_ynv0i")

[connection signal="pressed" from="ClickablePanel" to="." method="_on_clickable_panel_pressed"]
